--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!--Web Page Info and Links-->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
